--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Boletines FCS</title>
 </head>
 
 <body>
+	<a href="boletin246.html">Boletín 246</a>
 </body>
 </html>
