--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-	<a href="246.html">Boletín 246</a>
+	<h1>Boletines Sociales</h1>
+	<a href="246.html">Boletín Número 246/ 06/11/2025</a>
 </body>
 </html>
+
 
