--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
 	<h1>Boletines Sociales</h1>
-	<a href="246.html">Boletín Número 246/ 06/11/2025</a>
+	<a href="246.html" target="_blank">Boletín Número 246/ 06/11/2025</a>
 </body>
 </html>
+
 
 
