--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
 	<h1>Boletines Sociales</h1>
 	<a href="246.html" target="_blank">Boletín Número 246/ 06/11/2025</a>
+	
+	<h1>InfoEstudiantes</h1>
+	<a href="infoestudiantes-18-11-2025.html" target="_blank">Boletín 18/11/2025</a>
+
 </body>
 </html>
+
 
 
 
