--- a/infoestudiantes-18-11-2025.html
+++ b/infoestudiantes-18-11-2025.html
@@ -19,7 +19,7 @@ td a img {
 <table width="600" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody>
     <tr>
-      <td><a href="https://sociales.unc.edu.ar/estudiantes" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes/ejemplo3.jpg" width="600" height="250" alt="" style="display: block; border-radius: 4px;"/></a></td>
+      <td><a href="https://sociales.unc.edu.ar/estudiantes" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/ejemplo3.jpg" width="600" height="250" alt="" style="display: block; border-radius: 4px;"/></a></td>
     </tr>
     
   </tbody>
@@ -31,11 +31,11 @@ td a img {
 </tbody></table>
 <table bgcolor="#fff" width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td width="31"><a href="https://www.facebook.com/Facultad-de-Ciencias-Sociales-UNC-144068339374296/" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/wpsociales/info/imagenes/1.png" width="29" height="29"></a></td>
-    <td width="31"><a href="https://twitter.com/Sociales_UNC" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/wpsociales/info/imagenes/2.png" width="29" height="29"></a></td>
-    <td width="31"><a href="https://www.instagram.com/socialesfacultad/" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/wpsociales/info/imagenes/3.png" width="29" height="29"></a></td>
-    <td width="31"><a href="https://www.youtube.com/channel/UCGG0C-D-2OI7W0ZwQ2Oe43A" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/wpsociales/info/imagenes/4.png" width="29" height="29"></a></td>
-    <td width="29"><a href="https://open.spotify.com/show/7FSb5B0SeuBTZzbl68AwVs?si=eaa15377dce84850" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/wpsociales/info/imagenes/6.png" width="29" height="29"></a></td>
+    <td width="31"><a href="https://www.facebook.com/Facultad-de-Ciencias-Sociales-UNC-144068339374296/" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/1_3.png" width="29" height="29"></a></td>
+    <td width="31"><a href="https://twitter.com/Sociales_UNC" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/x.png" width="29" height="29"></a></td>
+    <td width="31"><a href="https://www.instagram.com/socialesfacultad/" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/3_2.png" width="29" height="29"></a></td>
+    <td width="31"><a href="https://www.youtube.com/channel/UCGG0C-D-2OI7W0ZwQ2Oe43A" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/4.png" width="29" height="29"></a></td>
+    <td width="29"><a href="https://open.spotify.com/show/7FSb5B0SeuBTZzbl68AwVs?si=eaa15377dce84850" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/6_1.png" width="29" height="29"></a></td>
     <td width="143">&nbsp;</td>
     <!--cambiar fecha de boletin.-->
     <td width="304" style="font-family:Verdana, Geneva, sans-serif; text-align:right; font-size:10px">18 de noviembre de 2025 | <a href="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes-29-09-2025.html" title="Si no puede visualizar el boletín, ingrese aquí" target="_blank" style="text-decoration:none;color:#000">versión online</a></td>
@@ -52,8 +52,8 @@ td a img {
   </tr></tbody></table>
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody><tr>
-    <td width="299"><a href="https://sociales.unc.edu.ar/content/convocatoria-ayudant-para-ciclo-introductorio-del-ingreso-2026" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes/29-09/asueto-academico-y-administrativo-en-la-unc-para-el-30-de-septiembre.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
-    <td width="295"><a href="https://sociales.unc.edu.ar/content/inscripci-n-al-r-gimen-para-estudiantes-de-1-5-o-que-trabajan-yo-tienen-personas-cargo-1" target="_blank"></a><a href="https://sociales.unc.edu.ar/content/banco-de-pasantes-inscripci-n-segundo-odo-2025" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes/29-09/banco-de-pasantes-inscripciones-segundo-periodo-2025.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
+    <td width="299"><a href="https://sociales.unc.edu.ar/content/convocatoria-ayudant-para-ciclo-introductorio-del-ingreso-2026" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/asueto-academico-y-administrativo-en-la-unc-para-el-30-de-septiembre.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
+    <td width="295"><a href="https://sociales.unc.edu.ar/content/inscripci-n-al-r-gimen-para-estudiantes-de-1-5-o-que-trabajan-yo-tienen-personas-cargo-1" target="_blank"></a><a href="https://sociales.unc.edu.ar/content/banco-de-pasantes-inscripci-n-segundo-odo-2025" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/banco-de-pasantes-inscripciones-segundo-periodo-2025.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
   </tr>
   </tbody>
 </table>
@@ -82,8 +82,8 @@ td a img {
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody>
     <tr>
-      <td width="299"><a href="https://sociales.unc.edu.ar/content/cronograma-de-instancias-evaluativas " target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes/29-09/cronograma-de-instancias-evaluativas.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
-      <td width="295"><a href="https://sociales.unc.edu.ar/content/encuesta-estudiantes-sobre-extensi-n-universitaria-conoc-s-los-proyectos-o-inicitivas" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes/29-09/convocatorias-internacionales-para-estudiantes-de-grado.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a></td>
+      <td width="299"><a href="https://sociales.unc.edu.ar/content/cronograma-de-instancias-evaluativas " target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/cronograma-de-instancias-evaluativas.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
+      <td width="295"><a href="https://sociales.unc.edu.ar/content/encuesta-estudiantes-sobre-extensi-n-universitaria-conoc-s-los-proyectos-o-inicitivas" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/convocatorias-internacionales-para-estudiantes-de-grado.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a></td>
     </tr>
   </tbody>
 </table>
@@ -112,8 +112,8 @@ td a img {
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody>
     <tr>
-      <td width="299"><a href="https://sociales.unc.edu.ar/content/comunicaci-n-p-blica-de-la-ciencia-convocatoria-de-producciones-extensionistas" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes/02-09/info-estudiantes-boletin-11.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/becas-seu-convocatoria-2026-reuni-n-informativa" target="_blank"></a></td>
-      <td width="295"><a href="https://sociales.unc.edu.ar/content/inscripci-n-al-r-gimen-para-estudiantes-de-1-5-o-que-trabajan-yo-tienen-personas-cargo-1" target="_blank"></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a><a href="https://digesto.unc.edu.ar/handle/123456789/595189" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes/29-09/escuela-de-primavera-augm-2025-universidad-y-democracia-narrativas-memorias-y-horizontes-en-america-latina.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
+      <td width="299"><a href="https://sociales.unc.edu.ar/content/comunicaci-n-p-blica-de-la-ciencia-convocatoria-de-producciones-extensionistas" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/info-estudiantes-boletin-11.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/becas-seu-convocatoria-2026-reuni-n-informativa" target="_blank"></a></td>
+      <td width="295"><a href="https://sociales.unc.edu.ar/content/inscripci-n-al-r-gimen-para-estudiantes-de-1-5-o-que-trabajan-yo-tienen-personas-cargo-1" target="_blank"></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a><a href="https://digesto.unc.edu.ar/handle/123456789/595189" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/escuela-de-primavera-augm-2025-universidad-y-democracia-narrativas-memorias-y-horizontes-en-america-latina.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
     </tr>
   </tbody>
 </table>
@@ -148,7 +148,7 @@ td a img {
 </table>
 <table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
-    <td height="53" align="center" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><strong><a href="https://whatsapp.com/channel/0029VaTJ1JrH5JLtAre3Ab11" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/infoestudiantes/gif-info.gif" width="600" height="50" alt="" style="display: block; border-radius: 4px;"/></a></h2></td>
+    <td height="53" align="center" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><strong><a href="https://whatsapp.com/channel/0029VaTJ1JrH5JLtAre3Ab11" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/gif-info.gif" width="600" height="50" alt="" style="display: block; border-radius: 4px;"/></a></h2></td>
   </tr>
 </table>
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
@@ -186,7 +186,7 @@ td a img {
                                         <tbody><tr>
                                             <td valign="top" style="font-size: 11px; color: #f1f1f1; font-weight: normal; font-family: Georgia, Times, serif; line-height: 26px; vertical-align: top; text-align:right" class="center">
 
-                                                <a href="https://sociales.unc.edu.ar" target="_blank"><img src="http://nesta.sociales.unc.edu.ar/boletines/imagenes/Redes-Logonuevo-UNC.png" width="300" alt="" border="0" style="padding-top: 5px;"></a><br>
+                                                <a href="https://sociales.unc.edu.ar" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/redes-logonuevo-unc.png" width="300" alt="" border="0" style="padding-top: 5px;"></a><br>
                                             </td>
                                         </tr>
                                     </tbody></table>
