--- a/246.html
+++ b/246.html
@@ -16,7 +16,7 @@ td a img {
 </head>
 
 <body style="text-decoration:none; color:#000">
-<table background="http://200.16.30.67/boletines/imagenes/portada.jpg" width="600" height="250" border="0" cellspacing="0" cellpadding="0" align="center" style="display: block; border-radius: 4px;">
+<table background="https://sociales.unc.edu.ar/sites/default/files/portada.jpg" width="600" height="250" border="0" cellspacing="0" cellpadding="0" align="center" style="display: block; border-radius: 4px;">
   <tbody><tr>
    <!--cambiar número de boletin.-->
     <td width="299" height="113">&nbsp;</td>
@@ -30,11 +30,11 @@ td a img {
 </tbody></table>
 <table bgcolor="#fff" width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td width="31"><a href="https://www.facebook.com/Facultad-de-Ciencias-Sociales-UNC-144068339374296/" target="_blank"><img src="http://200.16.30.67/wpsociales/info/imagenes/1.png" width="29" height="29"></a></td>
-    <td width="31"><a href="https://twitter.com/Sociales_UNC" target="_blank"><img src="http://200.16.30.67/wpsociales/info/imagenes/2.png" width="29" height="29"></a></td>
-    <td width="31"><a href="https://www.instagram.com/socialesfacultad/" target="_blank"><img src="http://200.16.30.67/wpsociales/info/imagenes/3.png" width="29" height="29"></a></td>
-    <td width="31"><a href="https://www.youtube.com/channel/UCGG0C-D-2OI7W0ZwQ2Oe43A" target="_blank"><img src="http://200.16.30.67/wpsociales/info/imagenes/4.png" width="29" height="29"></a></td>
-    <td width="29"><a href="https://open.spotify.com/show/7FSb5B0SeuBTZzbl68AwVs?si=eaa15377dce84850" target="_blank"><img src="http://200.16.30.67/wpsociales/info/imagenes/6.png" width="29" height="29"></a></td>
+    <td width="31"><a href="https://www.facebook.com/Facultad-de-Ciencias-Sociales-UNC-144068339374296/" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/1_3.png" width="29" height="29"></a></td>
+    <td width="31"><a href="https://twitter.com/Sociales_UNC" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/x.png" width="29" height="29"></a></td>
+    <td width="31"><a href="https://www.instagram.com/socialesfacultad/" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/3_2.png" width="29" height="29"></a></td>
+    <td width="31"><a href="https://www.youtube.com/channel/UCGG0C-D-2OI7W0ZwQ2Oe43A" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/4.png" width="29" height="29"></a></td>
+    <td width="29"><a href="https://open.spotify.com/show/7FSb5B0SeuBTZzbl68AwVs?si=eaa15377dce84850" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/6_1.png" width="29" height="29"></a></td>
     <td width="143">&nbsp;</td>
     <!--cambiar fecha de boletin.-->
     <td width="304" style="font-family:Verdana, Geneva, sans-serif; text-align:right; font-size:10px"> 06 de noviembre  de 2025 | <a href="http://200.16.30.67/boletines/246.html" title="Si no puede visualizar el boletín, ingrese aquí" target="_blank" style="text-decoration:none;color:#000"> versión online</a></td>
@@ -73,7 +73,7 @@ td a img {
 </tbody></table>
 <table width="600" border="0" align="center" cellspacing="4">
   <tr>
-    <td ><img src="http://200.16.30.67/boletines/imagenes/2021/iconoboletin_loqueviene.jpg" width="600" height="30" style="display: block; border-radius: 4px;"/></td>
+    <td ><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_loqueviene.jpg" width="600" height="30" style="display: block; border-radius: 4px;"/></td>
   </tr>
 </table>
 <table width="604" border="0" align="center" cellpadding="0" cellspacing="3">
@@ -94,7 +94,7 @@ td a img {
 </table>
 <table width="607" border="0" align="center" cellspacing="4">
   <tr>
-    <td height="21" ><img src="http://200.16.30.67/boletines/imagenes/2021/iconoboletin_socialesopina.jpg" width="600" height="30" style="display: block; border-radius: 4px;"/></td>
+    <td height="21" ><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_socialesopina.jpg" width="600" height="30" style="display: block; border-radius: 4px;"/></td>
   </tr>
 </table>
 <table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -105,7 +105,7 @@ td a img {
 <table width="607" border="0" align="center" cellspacing="4">
   <tbody>
     <tr>
-      <td height="21"><img src="http://200.16.30.67/boletines/prueba/sucedio.jpg" width="600" height="30" style="display: block; border-radius: 4px;" /></td>
+      <td height="21"><img src="https://sociales.unc.edu.ar/sites/default/files/sucedio.jpg" width="600" height="30" style="display: block; border-radius: 4px;" /></td>
     </tr>
   </tbody>
 </table>
@@ -136,7 +136,7 @@ td a img {
 <table width="600" border="0" align="center" cellspacing="0">
   <tbody><tr>
  
-    <td height="35"><img src="http://200.16.30.67/boletines/imagenes/2021/iconoboletin_estudiantes.jpg" width="600" height="30" style="display: block; border-radius: 4px;"></td>
+    <td height="35"><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_estudiantes.jpg" width="600" height="30" style="display: block; border-radius: 4px;"></td>
     
   <!--Bloque contenido de Puedeinteresarte. No tocar estilos. Reemplazar contenido, con cortar y pegar.-->  </tr>
 </tbody></table>
@@ -150,7 +150,7 @@ td a img {
       <strong><strong>#Internacionales  | </strong></strong><a href="https://sociales.unc.edu.ar/content/estudiantes-de-grado" target="_blank" style="text-decoration:none;color:#000">Movilidad internacional y oportunidades</a></p></td></tr></tbody></table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td height="19"><img src="http://200.16.30.67/boletines/230img/hashtag-posgrado-sociales.jpg" width="601" height="31" style="display: block; border-radius: 4px;"></td>
+    <td height="19"><img src="https://sociales.unc.edu.ar/sites/default/files/hashtag-posgrado-sociales.jpg" width="601" height="31" style="display: block; border-radius: 4px;"></td>
   </tr>
 </tbody></table>
 	
@@ -171,12 +171,12 @@ td a img {
       <strong>#Seminario</strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/seminario-de-posgrado-gesti-n-de-proyectos-de-innovaci-n-educativa" target="_blank" style="text-decoration:none;color:#000">Gestión de proyectos de innovación educativa</a></p></td></tr></tbody></table>
 <table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
-    <td height="53" align="center" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><strong><a href="https://sociales.unc.edu.ar/content/aperturas-de-carreras-de-posgrado-2024-2025" target="_blank"><img src="http://200.16.30.67/boletines/246img/apertura-de-cohortes-carreas-de-posgrado-en-sociales-2025.jpg" width="600" height="90" alt="" style="display: block; border-radius: 4px;"/></a></h2></td>
+    <td height="53" align="center" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><strong><a href="https://sociales.unc.edu.ar/content/aperturas-de-carreras-de-posgrado-2024-2025" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/apertura-de-cohortes-carreas-de-posgrado-en-sociales-2025.jpg" width="600" height="90" alt="" style="display: block; border-radius: 4px;"/></a></h2></td>
   </tr>
 </table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td height="19"><img src="http://200.16.30.67/boletines/imagenes/2021/iconoboletin_docente.jpg" width="600" height="30" style="display: block; border-radius: 4px;"></td>
+    <td height="19"><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_docente.jpg" width="600" height="30" style="display: block; border-radius: 4px;"></td>
   </tr>
 </tbody></table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="3">
@@ -195,7 +195,7 @@ td a img {
 <table width="600" border="0" align="center" cellspacing="4">
   <tbody>
     <tr>
-      <td height="35"><img src="http://200.16.30.67/boletines/imagenes/2021/iconoboletin_comunidad.jpg" width="601" height="31" style="display: block; border-radius: 4px;" /></td>
+      <td height="35"><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_comunidad.jpg" width="601" height="31" style="display: block; border-radius: 4px;" /></td>
       <!--Bloque contenido de Puedeinteresarte. No tocar estilos. Reemplazar contenido, con cortar y pegar.-->
     </tr>
   </tbody>
@@ -213,7 +213,7 @@ td a img {
 </table>
 <table width="600" border="0" align="center" cellspacing="4">
   <tr>
-    <td height="35" ><img src="http://200.16.30.67/boletines/imagenes/2021/iconoboletin_editoriales.jpg" width="601" height="31" style="display: block; border-radius: 4px;" /></td>
+    <td height="35" ><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_editoriales.jpg" width="601" height="31" style="display: block; border-radius: 4px;" /></td>
     <!--Bloque contenido de Puedeinteresarte. No tocar estilos. Reemplazar contenido, con cortar y pegar.-->
   </tr>
 </table>
@@ -226,7 +226,7 @@ td a img {
 <table width="600" border="0" align="center" cellspacing="4">
   <tbody>
     <tr>
-      <td height="21" align="right"><span style="font-family:Verdana, Geneva, sans-serif; text-align:left; font-size:14px; color:#3BB499"><img src="http://200.16.30.67/boletines/imagenes/agenda1.jpg" width="601" height="31" style="display: block; border-radius: 4px;" /></span></td>
+      <td height="21" align="right"><span style="font-family:Verdana, Geneva, sans-serif; text-align:left; font-size:14px; color:#3BB499"><img src="https://sociales.unc.edu.ar/sites/default/files/agenda1.jpg" width="601" height="31" style="display: block; border-radius: 4px;" /></span></td>
     </tr>
   </tbody>
 </table>
@@ -253,20 +253,20 @@ td a img {
 </table>
 <table width="600" border="0" align="center" cellspacing="4">
   <tr>
-    <td height="35" ><img src="http://200.16.30.67/boletines/imagenes/2021/iconoboletin_socialesenelosmedios.jpg" width="600" height="30" style="display: block; border-radius: 4px;"/></td>
+    <td height="35" ><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_socialesenelosmedios.jpg" width="600" height="30" style="display: block; border-radius: 4px;"/></td>
   </tr>
 </table>
 <table width="604" height="53" border="0" align="center" cellpadding="0" cellspacing="1">
   <tr>
-    <td width="29" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px"><img src="http://200.16.30.67/boletines/imagenes/2021/SM3.jpg" width="25" height="25" style="display: block; border-radius: 4px;"/></td>
+    <td width="29" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px"><img src="https://sociales.unc.edu.ar/sites/default/files/sm3.jpg" width="25" height="25" style="display: block; border-radius: 4px;"/></td>
     <td width="288" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">Radio Madres de Plaza de Mayo AM 530   |<strong> </strong><a style="text-decoration:none;color:#000" href="https://www.youtube.com/watch?v=4If92GEriVU" target="_blank"><strong>&quot;Hasta el propio Trump se sorprendió con la elección de Milei”: Carlos J. Centeno en Bonavitta 530<br />
       <br />
     </strong></a></td>
-    <td width="25" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px"><img src="http://200.16.30.67/boletines/imagenes/2021/SM2.jpg" width="25" height="25" style="display: block; border-radius: 4px;"/></td>
+    <td width="25" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px"><img src="https://sociales.unc.edu.ar/sites/default/files/sm2.jpg" width="25" height="25" style="display: block; border-radius: 4px;"/></td>
     <td width="257" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">El objetivo   |<strong> </strong><a style="text-decoration:none;color:#000" href="https://elobjetivo.com.ar/contenido/92283/cordoba-se-prepara-para-una-nueva-edicion-de-la-noche-de-los-museos" target="_blank"><strong>Archivo Gregorio Bermann: Córdoba se prepara para una nueva edición de la Noche de los Museos</strong></a></td>
   </tr>
   <tr>
-    <td width="29" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px"><img src="http://200.16.30.67/boletines/imagenes/2021/SM2.jpg" width="25" height="25" style="display: block; border-radius: 4px;"/></td>
+    <td width="29" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px"><img src="hhttps://sociales.unc.edu.ar/sites/default/files/sm2.jpg" width="25" height="25" style="display: block; border-radius: 4px;"/></td>
     <td align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">Cba24N    |<strong> </strong><a style="text-decoration:none;color:#000" href="https://www.cba24n.com.ar/universidad/reconocimiento-a-abanderada-y-escoltas-de-sociales_a69036779c80794e16ea85ffd" target="_blank"><strong>Reconocimiento a abanderada y escoltas de Sociales</strong></a></td>
     <td width="25" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">&nbsp;</td>
     <td width="257" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">&nbsp;</td>
@@ -275,7 +275,7 @@ td a img {
 <table width="600" border="0" align="center" cellspacing="4">
   <tbody>
     <tr>
-      <td height="35"><img src="http://200.16.30.67/boletines/imagenes/2021/iconoboletin_tambientepuedeinteresar.jpg" width="600" height="30" style="display: block; border-radius: 4px;" /></td>
+      <td height="35"><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_tambientepuedeinteresar.jpg" width="600" height="30" style="display: block; border-radius: 4px;" /></td>
       <!--Bloque contenido de Puedeinteresarte. No tocar estilos. Reemplazar contenido, con cortar y pegar.-->
     </tr>
   </tbody>
