--- a/infoestudiantes-18-11-2025.html
+++ b/infoestudiantes-18-11-2025.html
@@ -52,8 +52,8 @@ td a img {
   </tr></tbody></table>
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody><tr>
-    <td width="299"><a href="https://sociales.unc.edu.ar/content/convocatoria-ayudant-para-ciclo-introductorio-del-ingreso-2026" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/asueto-academico-y-administrativo-en-la-unc-para-el-30-de-septiembre.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
-    <td width="295"><a href="https://sociales.unc.edu.ar/content/inscripci-n-al-r-gimen-para-estudiantes-de-1-5-o-que-trabajan-yo-tienen-personas-cargo-1" target="_blank"></a><a href="https://sociales.unc.edu.ar/content/banco-de-pasantes-inscripci-n-segundo-odo-2025" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/banco-de-pasantes-inscripciones-segundo-periodo-2025.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
+    <td width="299"><a href="https://sociales.unc.edu.ar/content/convocatoria-ayudant-para-ciclo-introductorio-del-ingreso-2026" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/convocatoria-ayudant-para-ciclo-introductorio-del-ingreso-2026.jpg" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
+    <td width="295"><a href="https://sociales.unc.edu.ar/content/inscripci-n-al-r-gimen-para-estudiantes-de-1-5-o-que-trabajan-yo-tienen-personas-cargo-1" target="_blank"></a><a href="https://sociales.unc.edu.ar/content/encuesta-para-estudiantes-inteligencia-artificial-en-las-pr-cticas-de-estudio-y-aprendizaje" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/encuesta-para-estudiantes-inteligencia-artificial-en-las-pr-cticas-de-estudio-y-aprendizaje.jpg" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
   </tr>
   </tbody>
 </table>
@@ -62,7 +62,8 @@ td a img {
   <tbody>
     <tr>
        <td width="300" align="left" valign="top"><span style="font-family:Verdana, Geneva, sans-serif; font-size:16px;"><strong><a style="color:#000; text-decoration:none" href="https://sociales.unc.edu.ar/content/convocatoria-ayudant-para-ciclo-introductorio-del-ingreso-2026" target="_blank">Convocatoria | Ayudantías para <br />
-       el Ciclo Introductorio del Ingreso 2026</a></strong></span></td>
+       el Ciclo Introductorio del <br />
+       Ingreso 2026</a></strong></span></td>
       <td width="296" align="left" valign="top"><span style="font-family:Verdana, Geneva, sans-serif; font-size:16px;"><strong><a href="https://sociales.unc.edu.ar/content/encuesta-para-estudiantes-inteligencia-artificial-en-las-pr-cticas-de-estudio-y-aprendizaje" target="_blank" style="color:#000; text-decoration:none">Encuesta | La IA en las prácticas de estudio y aprendizaje de estudiantes de la FCS</a></strong></span></td>
     </tr>
     <tr>
@@ -82,8 +83,8 @@ td a img {
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody>
     <tr>
-      <td width="299"><a href="https://sociales.unc.edu.ar/content/cronograma-de-instancias-evaluativas " target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/cronograma-de-instancias-evaluativas.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
-      <td width="295"><a href="https://sociales.unc.edu.ar/content/encuesta-estudiantes-sobre-extensi-n-universitaria-conoc-s-los-proyectos-o-inicitivas" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/convocatorias-internacionales-para-estudiantes-de-grado.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a></td>
+      <td width="299"><a href="https://sociales.unc.edu.ar/content/nuevo-horario-de-atenci-n-del-despacho-de-estudiantes-durante-noviembre-y-diciembre" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/nuevo-horario-de-atenci-n-del-despacho-de-estudiantes-durante-noviembre-y-diciembre.jpg" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
+      <td width="295"><a href="https://sociales.unc.edu.ar/content/encuesta-estudiantes-sobre-extensi-n-universitaria-conoc-s-los-proyectos-o-inicitivas" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/encuesta-estudiantes-sobre-extensi-n-universitaria-conoc-s-los-proyectos-o-inicitivas.jpg" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a></td>
     </tr>
   </tbody>
 </table>
@@ -91,7 +92,7 @@ td a img {
 			  " border="0" align="center">
   <tbody>
     <tr>
-      <td width="300" align="left" valign="top"><span style="font-family:Verdana, Geneva, sans-serif; font-size:16px;"><strong><a style="color:#000; text-decoration:none" href="https://sociales.unc.edu.ar/content/encuesta-para-estudiantes-inteligencia-artificial-en-las-pr-cticas-de-estudio-y-aprendizaje" target="_blank">Nuevo horario de atención del Despacho de Estudiantes durante noviembre y diciembre</a></strong></span></td>
+      <td width="300" align="left" valign="top"><span style="font-family:Verdana, Geneva, sans-serif; font-size:16px;"><strong><a style="color:#000; text-decoration:none" href="https://sociales.unc.edu.ar/content/nuevo-horario-de-atenci-n-del-despacho-de-estudiantes-durante-noviembre-y-diciembre" target="_blank">Nuevo horario de atención del Despacho de Estudiantes durante noviembre y diciembre</a></strong></span></td>
       <td width="296" align="left" valign="top"><span style="font-family:Verdana, Geneva, sans-serif; font-size:16px;"><strong><a style="color:#000; text-decoration:none" href="https://sociales.unc.edu.ar/content/encuesta-estudiantes-sobre-extensi-n-universitaria-conoc-s-los-proyectos-o-inicitivas" target="_blank">Encuesta a estudiantes sobre proyectos e iniciativas extensionistas</a></strong></span></td>
     </tr>
     <tr>
@@ -112,8 +113,8 @@ td a img {
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody>
     <tr>
-      <td width="299"><a href="https://sociales.unc.edu.ar/content/comunicaci-n-p-blica-de-la-ciencia-convocatoria-de-producciones-extensionistas" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/info-estudiantes-boletin-11.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/becas-seu-convocatoria-2026-reuni-n-informativa" target="_blank"></a></td>
-      <td width="295"><a href="https://sociales.unc.edu.ar/content/inscripci-n-al-r-gimen-para-estudiantes-de-1-5-o-que-trabajan-yo-tienen-personas-cargo-1" target="_blank"></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a><a href="https://digesto.unc.edu.ar/handle/123456789/595189" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/escuela-de-primavera-augm-2025-universidad-y-democracia-narrativas-memorias-y-horizontes-en-america-latina.png" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
+      <td width="299"><a href="https://sociales.unc.edu.ar/content/comunicaci-n-p-blica-de-la-ciencia-convocatoria-de-producciones-extensionistas" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/comunicacion-publica-de-la-ciencia-convocatoria-de-producciones-extensionistas.jpg" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/becas-seu-convocatoria-2026-reuni-n-informativa" target="_blank"></a></td>
+      <td width="295"><a href="https://sociales.unc.edu.ar/content/inscripci-n-al-r-gimen-para-estudiantes-de-1-5-o-que-trabajan-yo-tienen-personas-cargo-1" target="_blank"></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a><a href="https://digesto.unc.edu.ar/handle/123456789/595189" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/asueto-universitario-por-el-dia-del-nodocente.jpg" width="300" height="300" alt="" style="display: block; border-radius: 4px;" /></a></td>
     </tr>
   </tbody>
 </table>
@@ -121,7 +122,8 @@ td a img {
 			  " border="0" align="center">
   <tbody>
     <tr>
-      <td width="300" align="left" valign="top"><span style="font-family:Verdana, Geneva, sans-serif; font-size:16px;"><strong><a style="color:#000; text-decoration:none" href="https://sociales.unc.edu.ar/content/comunicaci-n-p-blica-de-la-ciencia-convocatoria-de-producciones-extensionistas" target="_blank">Extensión | Convocatoria para la publicación de experiencias extensionistas</a><a style="color:#000; text-decoration:none" href="https://sociales.unc.edu.ar/content/2-cuatrimestre-2025-inscripciones-d-y-horarios-de-cursado" target="_blank"></a></strong></span></td>
+      <td width="300" align="left" valign="top"><span style="font-family:Verdana, Geneva, sans-serif; font-size:16px;"><strong><a style="color:#000; text-decoration:none" href="https://sociales.unc.edu.ar/content/comunicaci-n-p-blica-de-la-ciencia-convocatoria-de-producciones-extensionistas" target="_blank">Extensión | Convocatoria para <br />
+      la publicación de experiencias extensionistas</a><a style="color:#000; text-decoration:none" href="https://sociales.unc.edu.ar/content/2-cuatrimestre-2025-inscripciones-d-y-horarios-de-cursado" target="_blank"></a></strong></span></td>
      <td width="296" align="left" valign="top"><span style="font-family:Verdana, Geneva, sans-serif; font-size:16px;"><strong><a style="color:#000; text-decoration:none" href="https://digesto.unc.edu.ar/handle/123456789/595189" target="_blank">Asueto por el dia de los y las nodocentes</a></strong></span></td>
     </tr>
     <tr>
