--- a/infoestudiantes-18-11-2025.html
+++ b/infoestudiantes-18-11-2025.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0014)about:internet -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Boletín info#SocialesUNC | FCS | 2025 | UNC</title>
+<title>Boletín #infoEstudiantes | FCS | 2025 | UNC</title>
 <style type="text/css">
 a:link {	color: #000;text-decoration: none;}
 a:visited { text-decoration: none; }
