--- a/246.html
+++ b/246.html
@@ -37,7 +37,7 @@ td a img {
     <td width="29"><a href="https://open.spotify.com/show/7FSb5B0SeuBTZzbl68AwVs?si=eaa15377dce84850" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/6_1.png" width="29" height="29"></a></td>
     <td width="143">&nbsp;</td>
     <!--cambiar fecha de boletin.-->
-    <td width="304" style="font-family:Verdana, Geneva, sans-serif; text-align:right; font-size:10px"> 06 de noviembre  de 2025 | <a href="http://200.16.30.67/boletines/246.html" title="Si no puede visualizar el boletín, ingrese aquí" target="_blank" style="text-decoration:none;color:#000"> versión online</a></td>
+    <td width="304" style="font-family:Verdana, Geneva, sans-serif; text-align:right; font-size:10px"> 06 de noviembre  de 2025 | <a href="https://fcsboletines.github.io/boletines-html/246.html" title="Si no puede visualizar el boletín, ingrese aquí" target="_blank" style="text-decoration:none;color:#000"> versión online</a></td>
   </tr>
 </tbody></table>
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
