--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
 	<h1>Boletines Sociales</h1>
+	<a href="247.html" target="_blank">Boletín Número 247/ 20/11/2025</a>
 	<a href="246.html" target="_blank">Boletín Número 246/ 06/11/2025</a>
 	
 	<h1>InfoEstudiantes</h1>
@@ -14,6 +15,7 @@
 
 </body>
 </html>
+
 
 
 
