--- a/247.html
+++ b/247.html
@@ -37,7 +37,7 @@ td a img {
     <td width="29"><a href="https://open.spotify.com/show/7FSb5B0SeuBTZzbl68AwVs?si=eaa15377dce84850" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/6_1.png" width="29" height="29"></a></td>
     <td width="143">&nbsp;</td>
     <!--cambiar fecha de boletin.-->
-    <td width="304" style="font-family:Verdana, Geneva, sans-serif; text-align:right; font-size:10px"> 20 de noviembre  de 2025 | <a href="https://fcsboletines.github.io/boletines-html/246.html" title="Si no puede visualizar el boletín, ingrese aquí" target="_blank" style="text-decoration:none;color:#000"> versión online</a></td>
+    <td width="304" style="font-family:Verdana, Geneva, sans-serif; text-align:right; font-size:10px"> 20 de noviembre  de 2025 | <a href="https://fcsboletines.github.io/boletines-html/247.html" title="Si no puede visualizar el boletín, ingrese aquí" target="_blank" style="text-decoration:none;color:#000"> versión online</a></td>
   </tr>
 </tbody></table>
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
@@ -171,7 +171,8 @@ td a img {
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td width="597" height="40" align="left" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#Apertura </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/inscripcionesEPAI" target="_blank" style="text-decoration:none;color:#000">1° Cohorte a Distancia de la Especialización en Especialización en Producción y Análisis de Información para Políticas Públicas</a><br />
-        <strong>#Apertura </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/inscripcionEAPPYM" target="_blank" style="text-decoration:none;color:#000">9° Cohorte Especialización en Administración pública provincial y municipal</a></p></td></tr></tbody></table>
+      <strong>#Apertura </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/inscripcionEAPPYM" target="_blank" style="text-decoration:none;color:#000">9° Cohorte Especialización en Administración pública provincial y municipal</a><br />
+      <strong>#Apertura </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/apertura-8-cohorte-del-doctorado-en-administraci-n-y-pol-tica-p-blica" target="_blank" style="text-decoration:none;color:#000">8° Cohorte del Doctorado en Administración y Política Pública</a></p></td></tr></tbody></table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td height="19"><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_docente.jpg" width="600" height="30" style="display: block; border-radius: 4px;"></td>
@@ -232,8 +233,9 @@ td a img {
 </table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="3">
   <tr>
-    <td width="597" height="20" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/colecci-n-tesis" target="_blank"><strong>#Edicea |</strong> Colección de Tesis</a><br />
-      <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/colecci-n-documentos-de-trabajo" target="_blank"><strong>#Edicea |</strong> Colección Documentos de Trabajo</a><a style="text-decoration:none;color:#000" href="http://hdl.handle.net/11086/558029" target="_blank"><br />
+    <td width="597" height="20" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#Edicea |</strong><a style="text-decoration:none;color:#000" href="https://rdu.unc.edu.ar/items/67837f58-1673-421c-adcd-beaa4295704c" target="_blank"> Tramas de la colonialidad festiva en la Norpatagonia. Fiestas nacionales, cultura, política y economía entre 2003 y 2015, de Julio Monasterio</a><br />
+        <strong>#Edicea |</strong><a style="text-decoration:none;color:#000" href="https://rdu.unc.edu.ar/collections/f84d27d8-48e8-4257-ad0e-1646eb74b11a" target="_blank"> Carreras de drones en Córdoba. Asociaciones de interfaces para volar, de Sebastián Agustín Torrez</a><br />
+      <strong>#Edicea |</strong><a style="text-decoration:none;color:#000" href="https://rdu.unc.edu.ar/items/96420bab-b816-4175-8cc3-36e3f80de3ef" target="_blank"> &quot;La ciencia como vocación&quot; y &quot;La política como vocación&quot; de Max Weber: ¿dos profesiones, una ética?, de Marcos Hernández Carballido</a><a style="text-decoration:none;color:#000" href="http://hdl.handle.net/11086/558029" target="_blank"><br />
     </a></p></td>
   </tr>
 </table>
